--- a/paged-table.html
+++ b/paged-table.html
@@ -24,13 +24,24 @@
 <div id="main_content_wrap" class="outer">
     <section id="main_content" class="inner">
         <h3>Riot-table</h3>
-        <paginator class="b"></paginator>
+        <paginator class="a"></paginator>
 
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <rtable id="tab"
+                    <rtable id="tab0"
                             filter="column: gender, value: male"
+                            styles="tableClass:table table-hover table-condensed, colHeaderClass:header, sortUpClass:glyphicon glyphicon-arrow-up white, sortDownClass:glyphicon glyphicon-arrow-down white"></rtable>
+                </div>
+            </div>
+        </div>
+
+        <paginator class="b"></paginator>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <rtable id="tab1"
+                            filter="column: gender, value: female"
                             styles="tableClass:table table-hover table-condensed, colHeaderClass:header, sortUpClass:glyphicon glyphicon-arrow-up white, sortDownClass:glyphicon glyphicon-arrow-down white"></rtable>
                 </div>
             </div>
@@ -54,19 +65,37 @@
             if (req.status === 200) {
                 list = JSON.parse(req.responseText);
 
-                var pager = initPager(list, rtable);
-                var rtable = riot.mount('rtable#tab', { pager: pager, data: list })[0];
+                var pager = initClientPager(list, rtable);
+                var rtable = riot.mount('rtable#tab0', { pager: pager, data: list })[0];
             }
 
-            function initPager(list, rtable) {
+            function initClientPager(list, rtable) {
                 var nblocks = 5;
                 var total = list.length;
-                var paginatorSingle = riot.mount('.b', { 'total': total, 'nblocks': nblocks, items: list, table: rtable })[0];
+                var paginator = riot.mount('.a', { 'total': total, 'nblocks': nblocks, items: list, table: rtable })[0];
 
-                paginatorSingle.on('pageChange', function(e) {
-                    events.innerHTML = 'Single paginator event now do something page ' + e.page;
+                paginator.on('pageChange', function(e) {
+                    events.innerHTML = 'Client side paginator event now do something page ' + e.page;
                 });
-                return paginatorSingle;
+                return paginator;
+            }
+
+            var urlPaged = "http://localhost:1337";
+            if (req.status === 200) {
+                list = JSON.parse(req.responseText);
+
+                var pager = initServerPager(rtable);
+                var rtable = riot.mount('rtable#tab1', { pager: pager, url: urlPaged })[0];
+            }
+            
+            function initServerPager(url, rtable) {
+                var nblocks = 5;
+                var paginator = riot.mount('.b', { 'nblocks': nblocks, table: rtable })[0];
+
+                paginator.on('pageChange', function (e) {
+                    events.innerHTML = 'Server side paginator event now do something page ' + e.page;
+                });
+                return paginator;
             }
         </script>
     </section>
