--- a/paged-table.html
+++ b/paged-table.html
@@ -46,7 +46,8 @@
 
         <div id="events" class='group'>events</div>
 
-        <script src="bower_components/underscore/underscore-min.js"></script>
+        <script type="text/javascript" src="bower_components/underscore/underscore-min.js"></script>
+        <script type="text/javascript" src="bower_components/es6-promise/es6-promise.js"></script>
         <script type="text/javascript" src="bower_components/riot/riot.js"></script>
         <script type="text/javascript" src="bower_components/riot/compiler.js"></script>
         <script type="text/javascript" src="bower_components/riot-ts/riot-ts.js"></script>
